--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.merimdigitalmedia.underflow</groupId>
     <artifactId>Underflow</artifactId>
-    <version>21.04</version>
+    <version>21.05</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,7 +21,7 @@
         <repository>
             <id>gitlab-bk</id>
             <!-- 151 is gitlab project ID of bkpackages-->
-            <url>https://gitlab.reboot-qsr.com/api/v4/projects/152/packages/maven</url> 
+            <url>https://gitlab.reboot-qsr.com/api/v4/projects/152/packages/maven</url>
         </repository>
     </repositories>
     <distributionManagement>
