--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.merimdigitalmedia.underflow</groupId>
     <artifactId>Underflow</artifactId>
-    <version>21.07</version>
+    <version>21.07u1</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
