--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,41 +1,4 @@
-#
-# https://docs.gitlab.com/ee/ci/yaml/README.html
-#
-
-# https://docs.gitlab.com/ee/ci/yaml/README.html#workflowrules-templates
-#include:
-#  - template: "Workflows/MergeRequest-Pipelines.gitlab-ci.yml"
-
-stages:
-  - build
-  - deploy
-
-cache:
-  paths:
-    - .m2/repository/
-
-image: maven:3.6-jdk-11
-
-variables:
-  MAVEN_CLI_OPTS: "--batch-mode"
-
-build:
-  stage: build
-  #only:
-  #  refs:
-  #    - merge_requests
-  script:
-    - mvn $MAVEN_CLI_OPTS compile
-    - mvn $MAVEN_CLI_OPTS package
-  artifacts:
-    expire_in: 10 min
-    paths:
-      - target/
-
-deploy:
-  stage: deploy
-  #only:
-  #  refs:
-  #    - merge_requests
-  script:
-    - "mvn $MAVEN_CLI_OPTS deploy -s ./.gitlab-ci/maven-settings.xml"
+#https://gitlab.reboot-qsr.com/devops/ci-template/-/blob/master/JavaLib-Pipelines.gitlab-ci.yml
+include:
+  - project: 'devops/ci-template'
+    file: '/JavaLib-Pipelines.gitlab-ci.yml'
