--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,25 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>test-as-jar</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <version>3.2.2</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>test-jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <dependencies>
@@ -212,5 +231,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 </project>
