--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,9 @@
     </distributionManagement>
 
     <modules>
-        <module>underflow</module>
         <module>underflow-api-form</module>
         <module>underflow-core</module>
-        <module>underflow-future</module>
+        <module>underflow-sample</module>
     </modules>
 
     <properties>
@@ -52,7 +51,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.2</version>
+            <version>1.7.36</version>  <!-- MAXIMUM Java 1.8 Version -->
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.undertow/undertow-core -->
@@ -74,7 +73,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.4.1</version>
+            <version>1.2.11</version> <!-- MAXIMUM Java 1.8 Version -->
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -96,11 +95,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Multi-Release>true</Multi-Release>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.1.2</version>
+                <version>3.3.0</version>
             </plugin>
             <!-- Java version to use -->
             <plugin>
@@ -110,6 +116,45 @@
                 <configuration>
                     <release>${java.release}</release>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>compile-java</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <release>${java.release}</release>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>compile-java-8</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <release>${java.release}</release>
+                            <compileSourceRoots>
+                                <compileSourceRoot>${project.basedir}/src/main/java8</compileSourceRoot>
+                            </compileSourceRoots>
+                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>compile-java-9</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <release>9</release>
+                            <compileSourceRoots>
+                                <compileSourceRoot>${project.basedir}/src/main/java9</compileSourceRoot>
+                            </compileSourceRoots>
+                            <multiReleaseOutput>true</multiReleaseOutput>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <!-- Attach sources -->
             <plugin>
@@ -241,6 +286,25 @@
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.8.1</version>
+                        <configuration>
+                            <release>${java.release}</release>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>compile-test-java</id>
+                                <goals>
+                                    <goal>testCompile</goal>
+                                </goals>
+                                <configuration>
+                                    <release>${java.release}</release>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-jar-plugin</artifactId>
                         <version>3.2.2</version>
                         <executions>
@@ -264,6 +328,30 @@
                                 </goals>
                                 <configuration>
                                     <includeScope>test</includeScope>
+                                    <outputDirectory>${project.build.directory}/</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>copy-dependencies</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>3.3.0</version>
+                        <executions>
+                            <execution>
+                                <id>copy-dependencies</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <configuration>
                                     <outputDirectory>${project.build.directory}/</outputDirectory>
                                 </configuration>
                             </execution>
