--- a/underflow-sample/pom.xml
+++ b/underflow-sample/pom.xml
@@ -11,8 +11,12 @@
     </parent>
 
     <groupId>com.merim.digitalpayment.underflow</groupId>
-    <artifactId>underflow</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>underflow-sample</artifactId>
+
+    <properties>
+        <maven.install.skip>true</maven.install.skip>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -21,9 +25,15 @@
             <version>${revision}</version>
         </dependency>
         <dependency>
-            <groupId>com.merim.digitalpayment.underflow</groupId>
-            <artifactId>underflow-api-form</artifactId>
-            <version>${revision}</version>
+            <groupId>io.undertow</groupId>
+            <artifactId>undertow-core</artifactId>
+            <version>2.2.19.Final</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.11</version> <!-- MAXIMUM Java 1.8 Version -->
         </dependency>
     </dependencies>
 </project>
