--- a/underflow-security/pom.xml
+++ b/underflow-security/pom.xml
@@ -10,10 +10,13 @@
         <version>${revision}</version>
     </parent>
 
-    <artifactId>underflow-api-form</artifactId>
+    <artifactId>underflow-security</artifactId>
 
     <properties>
         <maven.install.skip>false</maven.install.skip>
         <maven.deploy.skip>false</maven.deploy.skip>
     </properties>
+
+    <dependencies>
+    </dependencies>
 </project>
