--- a/underflow-template/pom.xml
+++ b/underflow-template/pom.xml
@@ -10,10 +10,25 @@
         <version>${revision}</version>
     </parent>
 
-    <artifactId>underflow-api-form</artifactId>
+    <artifactId>underflow-template</artifactId>
 
     <properties>
         <maven.install.skip>false</maven.install.skip>
         <maven.deploy.skip>false</maven.deploy.skip>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.merim.digitalpayment.underflow</groupId>
+            <artifactId>underflow-core</artifactId>
+            <version>${revision}</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>${freemarker-version}</version>
+        </dependency>
+    </dependencies>
 </project>
