UnderflowServer can now handle request logger automatically
Signed-off-by: Pierre Adam <p.adam@merim-groupe.com>

--- a/underflow-server/pom.xml
+++ b/underflow-server/pom.xml
@@ -18,5 +18,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.merim.digitalpayment.underflow</groupId>
+            <artifactId>underflow-core</artifactId>
+            <version>${revision}</version>
+        </dependency>
     </dependencies>
 </project>
