Re-work AssetLoader to handle etag
Signed-off-by: Pierre Adam <p.adam@merim-groupe.com>

--- a/underflow-core/pom.xml
+++ b/underflow-core/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>underflow-utils</artifactId>
             <version>${revision}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${apache-commons-codec-version}</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
