--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     </modules>
 
     <properties>
-        <revision>23.06-DEV</revision>
+        <revision>23.07-DEV</revision>
 
         <java.release>8</java.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -53,9 +53,12 @@
         <maven.install.skip>true</maven.install.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
 
+        <undertow-version>2.3.7.Final</undertow-version>
+
         <!-- Common -->
         <jackson-version>2.13.4</jackson-version> <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
         <apache-commons-io-version>2.11.0</apache-commons-io-version> <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <apache-commons-codec-version>1.16.0</apache-commons-codec-version> <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
 
         <!-- Templates -->
         <freemarker-version>2.3.31</freemarker-version> <!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
@@ -74,7 +77,7 @@
         <dependency>
             <groupId>io.undertow</groupId>
             <artifactId>undertow-core</artifactId>
-            <version>2.2.19.Final</version>
+            <version>${undertow-version}</version>
             <scope>provided</scope>
         </dependency>
 
