--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>io.undertow</groupId>
             <artifactId>undertow-core</artifactId>
-            <version>2.2.19.Final</version>
+            <version>${undertow-version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
         <dependency>
